# bot_discord

./: Cargo.toml
src/: cep_request.rs  main.rs
