[package]
name = "discord-help-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
dotenv="0.15.0"
reqwest = "0.11"
cargo-watch = "8.4.1"
serde = "1.0"
serde_json = "1.0"
